@startuml

abstract class Drink {
    - description: String
    - milk: Boolean
    - soy: Boolean
    - chocolate: Boolean

    + getDescription(): String
    + cost(): Double
    + hasMilk(): Boolean
    + setMilk(): Integer
    + hasSoy(): Boolean
    + setSoy(): Integer
}
note left: 调料属性设计为 Boolean，\n hasXxx() 表示是否有该调料

class ShortBlack
class LongBlack

ShortBlack --|> Drink
LongBlack --|> Drink

@enduml